worked on user resgistrationpage for zoom in behaviours and also fixidi landing page behavior for cardson mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,10 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+@supports (-webkit-touch-callout: none) {
+  input,
+  select,
+  textarea {
+    font-size: 16px !important;
+  }
+}
